automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -525,7 +525,9 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    "
+    "    \n",
+    "    newlist = sorted(distance_all(first_neighbor, neighbors), key=lambda k: k['distance'])\n",
+    "    return newlist[]"
    ]
   },
   {
