--- a/index.ipynb
+++ b/index.ipynb
@@ -518,25 +518,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    \n",
     "    newlist = sorted(distance_all(first_neighbor, neighbors), key=lambda k: k['distance'])\n",
-    "    return newlist[]"
+    "    if number:\n",
+    "        return newlist[:number]\n",
+    "    else:\n",
+    "        return newlist\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'avenue': 5, 'distance': 1.0, 'name': 'Bob', 'street': 8},\n",
+       " {'avenue': 3, 'distance': 2.23606797749979, 'name': 'Steven', 'street': 6}]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nearest_neighbors(fred, neighbors, 2)\n",
     "# [{'avenue': 5, 'distance': 1.0, 'name': 'Bob', 'street': 8},\n",
